fix overflowing bible verses on smaller displays

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -339,8 +339,16 @@ footer {
     }
   }
 
-  .bible-verse::before {
-    display: none;
+  .bible-verse {
+    &::before {
+      display: none;
+    }
+
+    p {
+      padding: initial;
+      margin: initial;
+      width: auto;
+    }
   }
 
   .about-body {
